# mlops-netflix

./: README.md  gallery-tests.py  like.py  login.py  movie_db_utils.py
assets/: clustered_netflix_titles.csv  predefined_reviews.csv
mdr/: clustered_netflix_titles.csv  dataframe_output.csv  document.aux  document.blg  document.out  document.tex  generationfile_userprofile.py  generationfile_userrating.py  machinelearning_code.py  popularity.json  predicted_popularity.json  profiles.csv  ratings.csv  readme..txt  training_ML.py  update_popularity.py  user_profiles.csv  user_ratings.csv
sc/: README.md  gallery.py  like.py  login.py  machine_learning_utils.py  movie_db_utils.py  pyproject.toml  ui.py  user.py
sc/assets/: clustered_netflix_titles.csv
